Add agent component with api integration

--- a/src/app/company/agents/list/list.component.html
+++ b/src/app/company/agents/list/list.component.html
@@ -1,1 +1,100 @@
-<p>list works!</p>
+<div class="row">
+    <div class="col-md-11">
+      <div class="card" id="add-agent-card">
+        <div class="right">
+          <div class="card" id="container-card-right">
+            <div class="card-body">
+              <div class="card-title">
+                All Agents<br />
+                <a href="">Download Chat History</a>
+                <div id="btn-group-container">
+                  <div class="dropdown">
+                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Agent Type
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">All Agent</a>
+                    <a class="dropdown-item" href="#">Invited Agent</a>
+                  </div>
+                </div>
+                </div>
+              </div>
+              <!-- Form -->
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <!-- Table -->
+                <div class="card">
+                  <div class="card-body" id="table-container">
+                    <div class="card-title">View All Agents 
+                      <div class="form-group">
+                  
+                          <input
+                            type="text"
+                            class="form-control"
+                            id="message-input"
+                            aria-describedby="emailHelp"
+                            placeholder="Search Agent"
+                          />
+                         
+                        </div>
+                    </div>
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">First</th>
+                          <th scope="col">Last</th>
+                          <th scope="col">Handle</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>Mark</td>
+                          <td>Otto</td>
+                          <td>@mdo</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>Jacob</td>
+                          <td>Thornton</td>
+                          <td>@fat</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3</th>
+                          <td>Larry</td>
+                          <td>the Bird</td>
+                          <td>@twitter</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <nav aria-label="Page navigation example">
+                      <ul class="pagination">
+                        <li class="page-item">
+                          <a class="page-link" href="#">Previous</a>
+                        </li>
+                        <li class="page-item">
+                          <a class="page-link" href="#">1</a>
+                        </li>
+                        <li class="page-item">
+                          <a class="page-link" href="#">2</a>
+                        </li>
+                        <li class="page-item">
+                          <a class="page-link" href="#">3</a>
+                        </li>
+                        <li class="page-item">
+                          <a class="page-link" href="#">Next</a>
+                        </li>
+                      </ul>
+                    </nav>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
