--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -123,8 +123,8 @@
     </li>
 
 
-    <li>
-      <span [routerLink]="['/company/add-agent']" [routerLinkActive]="'active'">
+    <!-- <li>
+      <span [routerLink]="['/company/agents']" [routerLinkActive]="'active'">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-person"
           viewBox="0 0 16 16">
           <path
@@ -133,7 +133,36 @@
         </svg>
         AGENTS
       </span>
+    </li> -->
+    <li (click)="toggleDomainOpen($event,'agents')">
+      <span [ngClass]="{'active':agentsClass}">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bullseye"
+          viewBox="0 0 16 16">
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+          <path d="M8 13A5 5 0 1 1 8 3a5 5 0 0 1 0 10zm0 1A6 6 0 1 0 8 2a6 6 0 0 0 0 12z" />
+          <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8z" />
+          <path d="M9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+        </svg>
+        Agents
+        <svg *ngIf="!agentsOpen" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+          class="bi bi-arrow-down" viewBox="0 0 16 16">
+          <path fill-rule="evenodd"
+            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+        </svg>
+        <svg *ngIf="agentsOpen" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+          class="bi bi-arrow-up" viewBox="0 0 16 16">
+          <path fill-rule="evenodd"
+            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+        </svg>
+      </span>
     </li>
+
+    <ul class="nav-container-child" *ngIf="agentsOpen">
+      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents']" [routerLinkActive]="'active'">
+        View</li>
+      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents/add']"
+        [routerLinkActive]="'active'">Create</li>
+    </ul>
 
 
     <li>
