--- a/src/app/company/agents/list/list.component.html
+++ b/src/app/company/agents/list/list.component.html
@@ -43,29 +43,21 @@
                       <thead>
                         <tr>
                           <th scope="col">#</th>
-                          <th scope="col">First</th>
-                          <th scope="col">Last</th>
-                          <th scope="col">Handle</th>
+                          <th scope="col">Name</th>
+                          <th scope="col">Company</th>
+                          <th scope="col">No Of Chats</th>
+                          <th scope="col">Online</th>
+                          <th scope="col">Chat History</th>
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">2</th>
-                          <td>Jacob</td>
-                          <td>Thornton</td>
-                          <td>@fat</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>Larry</td>
-                          <td>the Bird</td>
-                          <td>@twitter</td>
+                        <tr *ngFor="let agent of agentList;let i = index">
+                          <th scope="row">{{i}}</th>
+                          <td>{{agent.human_agent}}</td>
+                          <td>{{agent.company}}</td>
+                          <td>{{agent.no_of_chats}}</td>
+                          <td>{{agent.online}}</td>
+                          <td>Null</td>
                         </tr>
                       </tbody>
                     </table>
