Change dropdown in header bar

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -16,8 +16,8 @@
         </a>
 
         <div class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" [routerLink]="['/company/dashboard']">Dashboard</a>
+          <a class="dropdown-item" href="#">Your Account</a>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
       </div>
