--- a/src/app/company/layout/sidebar/sidebar.component.css
+++ b/src/app/company/layout/sidebar/sidebar.component.css
@@ -1,6 +1,8 @@
 .sidebar-container{
     width: 250px;
     height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
     background-color: white;
     position: fixed;
     transition: all 0.5s;
