--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -9,6 +9,23 @@
     transform: translateX(250px);
 }
 
+.navbar-open-container::after{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.3;
+    top: 0px;
+    left: 0px;
+    background-color: black;
+}
+
+.navbar-open-button{
+    color: black !important;
+    background-color: white !important;
+}
+
+
 .navbar-container{
     max-width: 1920px;
     margin: auto;
@@ -30,6 +47,9 @@
     position: absolute;
     color: whitesmoke;
     top: 7px;
+    z-index: 100;
+    transition: all 0.5s;
+    
 }
 .navbar-toggle i{
     transition: transform 0.3s;
