--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,7 +1,7 @@
 <app-sidebar [sidebarOpen]="sidebarOpen"></app-sidebar>
-<div class="whitesmoke" [ngClass]="{'navbar-open' : sidebarOpen}">
+<div class="whitesmoke" [ngClass]="{'navbar-open' : !smallScreen && sidebarOpen,'navbar-open-container': smallScreen && sidebarOpen}">
   <div>
-    <button id="navbar-toggle-sidebar" class="navbar-toggle" [ngClass]="{'navbar-open-button' : sidebarOpen}" (click)="toggleSidebar()"><i class="ic fa fa-bars"></i></button>
+    <button id="navbar-toggle-sidebar" class="navbar-toggle" [ngClass]="{'navbar-open-button' : smallScreen && sidebarOpen}" (click)="toggleSidebar()"><i class="ic fa fa-bars"></i></button>
     <div class="title-bar">
       <span>{{getTitle()}}</span>
       <div class="dropdown show" id="logout-dropdown">
