--- a/src/app/company/web-link/web-link.component.css
+++ b/src/app/company/web-link/web-link.component.css
@@ -15,3 +15,9 @@
 #infobar{
     margin-top: 10px;
 }
+
+#intent-table-container{
+  overflow-x: scroll;
+  overflow-y: scroll;
+  max-height: 500px;
+}
