--- a/src/app/company/web-link/web-link.component.css
+++ b/src/app/company/web-link/web-link.component.css
@@ -21,3 +21,5 @@
   overflow-y: scroll;
   max-height: 500px;
 }
+
+thead tr:nth-child(1) th{background: white; position: sticky;top: -20px;z-index: 10;}
