--- a/src/app/company/web-link/web-link.component.html
+++ b/src/app/company/web-link/web-link.component.html
@@ -78,7 +78,7 @@
           <!-- Table -->
           <div class="card">
             <div id="intent-table-container" class="card-body">
-              <div class="card-title">View Added Entities</div>
+              <div class="card-title">View Added Chatbots</div>
               <table class="table table-striped">
                 <thead>
                   <tr>
