--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -1,38 +1,35 @@
 <header id="header">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-9">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="index.html">
-                        <img class="logo" src="../../../../assets/images/logo.png" alt="image">
-                        <img class="logo-stiky" src="../../../../assets/images/logo.png" alt="image">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']"
-                                    [routerLink]="['/pricing']">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/about-us']">About
-                                    Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']"
-                                    [routerLink]="['/features']">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']"
-                                    [routerLink]="['/contact-us']">Contact</a>
-                            </li>
-                            <!-- <li class="nav-item dropdown">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-9">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="index.html">
+            <img class="logo" src="../../../../assets/images/logo.png" alt="image">
+            <img class="logo-stiky" src="../../../../assets/images/logo.png" alt="image">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/pricing']">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/about-us']">About
+                  Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/features']">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/contact-us']">Contact</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Pages
@@ -48,16 +45,24 @@
                                     <a class="dropdown-item" href="privacy-policy.html">Privacy Policy</a>
                                 </div>
                             </li> -->
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            <div class="col-lg-3 text-right">
-                <ul class="login">
-                    <li class="d-inline"><a href="/login">Login</a></li>
-                    <li class="d-inline active"><a href="/register">Register</a></li>
-                </ul>
-            </div>
-        </div>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="col-lg-3 text-right">
+        <ul class="login">
+          <ng-container *ngIf="!checkIfUserLoggedIn">
+            <li class="d-inline"><a href="/login">Login</a></li>
+            <li class="d-inline active"><a href="/register">Register</a></li>
+          </ng-container>
+          <ng-container *ngIf="checkIfUserLoggedIn">
+            <li class="d-inline active"><a href="{{ urlDashboard }}">Dashboard</a></li>
+          </ng-container>
+          <!-- <ng-template #dashboardBlock>
+
+          </ng-template> -->
+        </ul>
+      </div>
     </div>
+  </div>
 </header>
