--- a/src/app/company/generic-table/generic-table.component.html
+++ b/src/app/company/generic-table/generic-table.component.html
@@ -9,6 +9,7 @@ selectionMode="multiple" [(selection)]="selectedRows"
                 <input #searchText pInputText type="text" value="" (input)="dt1.filterGlobal(searchText.value, 'contains')" placeholder="Search keyword" />
             </span>
 
+            <button type="button" pButton pRipple icon="pi pi-file-o" style="margin-left: 10px; margin-top: 10px;" (click)="dt1.exportCSV()" class="p-mr-2" pTooltip="CSV" tooltipPosition="bottom"></button>
             <button (click)="submitEditRecords()" style="margin-left: 10px; margin-top: 10px;" class="p-button-help p-button-rounded" icon="pi pi-pencil" pButton type="button" label="Edit Record" ></button>
             <button style="margin-left: 10px;margin-top: 10px" class="p-button-help p-button-rounded" icon="pi pi-times" pButton type="button" label="Delete Record" ></button>
 
