--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -56,6 +56,7 @@
             <li class="d-inline active"><a href="/register">Register</a></li>
           </ng-container>
           <ng-container *ngIf="checkIfUserLoggedIn">
+            <li class="d-inline"><a (click)="logout()">Logout</a></li>
             <li class="d-inline active"><a href="{{ urlDashboard }}">Dashboard</a></li>
           </ng-container>
           <!-- <ng-template #dashboardBlock>
