Add primeng integration with remaining components

--- a/src/app/company/quicklinks/quicklinks.component.html
+++ b/src/app/company/quicklinks/quicklinks.component.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="card-body">
                       <h6><b>Quicklinks:</b></h6>
-                      <span style="margin-right: 5px;" *ngFor="let badge of quickLinkData.quicklinks.split(';')" class="badge badge-pill badge-primary">{{badge}}</span>
+                      <span style="margin-right: 5px;" *ngFor="let badge of quickLinkData.quicklinks" class="badge badge-pill badge-primary">{{badge}}</span>
                     </div>
                   </div>
                 </ng-template>
