--- a/src/app/company/web-link/web-link.component.html
+++ b/src/app/company/web-link/web-link.component.html
@@ -77,6 +77,8 @@
       </div>
           <!-- Table -->
           <app-generic-table [cols]="cols" [data]="websiteList" component="web-link" ></app-generic-table>
+          <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+          
       </form>
     </div>
   </div>
