--- a/src/app/company/agents/list/list.component.html
+++ b/src/app/company/agents/list/list.component.html
@@ -23,8 +23,8 @@
             </div>
 
             <!-- Table -->
-            <app-generic-table [cols]="cols" [data]="agentList" component="agent" ></app-generic-table>
-            
+            <app-generic-table [cols]="cols" [data]="agentList" component="agents" ></app-generic-table>
+            <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
           </div>
         </div>
       </div>
