--- a/src/app/company/domain/domain.component.html
+++ b/src/app/company/domain/domain.component.html
@@ -27,8 +27,9 @@
         </div>
 
         <!-- Table -->
-        <app-generic-table [cols]="cols" [data]="domainsList" ></app-generic-table>
-        
+        <app-generic-table [cols]="cols" [data]="domainsList" component="domain"></app-generic-table>
+        <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+
       </div>
     </div>
   </div>
