--- a/src/app/company/entity/view/view.component.html
+++ b/src/app/company/entity/view/view.component.html
@@ -17,8 +17,9 @@
           </div>
   
           <!-- Table -->
-          <app-generic-table [cols]="cols" [data]="entityList" ></app-generic-table>
-
+          <app-generic-table [cols]="cols" [data]="entityList" component="entity" ></app-generic-table>
+          <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+          
         </div>
       </div>
     </div>
