add delete endpoint integration

--- a/src/app/company/intents/list/list.component.html
+++ b/src/app/company/intents/list/list.component.html
@@ -26,9 +26,9 @@
           </div>
   
           <!-- Table -->
-          <app-generic-table [cols]="cols" [data]="intentList" component="intents"></app-generic-table>
+          <app-generic-table [cols]="cols" [data]="intentList" component="intents" [showDelete]="true" [showEdit]="true"></app-generic-table>
           <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
-          
+
         </div>
       </div>
     </div>
