--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -158,10 +158,10 @@
     </li>
 
     <ul class="nav-container-child" *ngIf="paymentsOpen">
-      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents']" [routerLinkActive]="'active'">
-        Inovices</li>
-      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/agents/add']"
-        [routerLinkActive]="'active'">Payment</li>
+      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/invoices']" [routerLinkActive]="'active'">
+        Invoices</li>
+      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/payment']" [routerLinkActive]="'active'">
+        Payment</li>
     </ul>
 
 
