--- a/src/app/company/payments/payment/payment.component.html
+++ b/src/app/company/payments/payment/payment.component.html
@@ -1,1 +1,77 @@
-<p>payment works!</p>
+<div class="row">
+  <div class="col-md-11">
+    <div class="card" id="add-agent-card">
+      <div class="right">
+        <div class="card" id="container-card-right">
+          <form>
+            <div class="card-body">
+
+              <!-- <div class="card-title">
+                Payment
+              </div> -->
+              <!-- Form -->
+            </div>
+
+            <!-- Form -->
+            <div class="row">
+              <!-- First Name -->
+
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Card Number*</label>
+                <input type="text" class="form-control" placeholder="**** **** **** 4547">
+              </div>
+
+              <!-- Last Name -->
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Name on card*</label>
+                <input type="text" class="form-control" placeholder="Name on card">
+              </div>
+
+              <!-- User Name -->
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Expiry Date*</label>
+                <input type="text" class="form-control" placeholder="02/2056">
+              </div>
+
+              <!--               
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Email address*</label>
+                <input type="email" class="form-control" placeholder="name@example.com">
+              </div>
+
+              
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Password*</label>
+                <input type="password" class="form-control" placeholder="Password">
+              </div>
+
+              
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Confirm Password*</label>
+                <input type="password" class="form-control" placeholder="Confirm Password">
+              </div>
+
+              
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Phone Number*</label>
+                <input type="number" class="form-control" placeholder="Phone number">
+              </div>
+
+              
+              <div class="col-xs-12 col-md-6 form-group">
+                <label for="exampleFormControlInput1">Password Match Confirmation</label>
+                <input readonly type="text" class="form-control" id="statusInput" placeholder="">
+              </div> -->
+
+
+              <!-- Phone -->
+              <button type="button" class="btn btn-success">Submit</button>
+            </div>
+          </form>
+          <!-- Form Ends -->
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
