add edit popups for entity and intents

--- a/src/app/company/entity/view/view.component.css
+++ b/src/app/company/entity/view/view.component.css
@@ -40,3 +40,12 @@
 #intent-table-container{
     overflow-x:scroll
 }
+
+#edit-container{
+  display: flex;
+}
+
+#edit-form{
+  outline: none;
+  border: none;
+}
