--- a/src/app/company/generic-edit-modal/generic-edit-modal.component.html
+++ b/src/app/company/generic-edit-modal/generic-edit-modal.component.html
@@ -1,4 +1,4 @@
-<p-dialog [(visible)]="display">
+<p-dialog [(visible)]="display" [draggable]="false" position="top" >
     <ng-template pTemplate="header">
         {{header}}
     </ng-template>
