--- a/src/assets/css/typography.css
+++ b/src/assets/css/typography.css
@@ -30,9 +30,9 @@ Design and Developed by: iqonicthemes.in
 /*---------------------------------------------------------------------
 2 import Css
 -----------------------------------------------------------------------*/
-@import url("fontawesome-all.min.css");
-@import url("owl.carousel.css");
-@import url("ionicons.min.css");
+/* @import url("./fontawesome-all.min.css");
+@import url("./owl.carousel.css");
+@import url("./ionicons.min.css"); */
 
 /*---------------------------------------------------------------------
 3 General
