--- a/src/app/agent/agent.component.html
+++ b/src/app/agent/agent.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
 <app-sidebar></app-sidebar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+    <div class="other" style="float: left;">
+
+    </div>
