--- a/src/app/agent/agent.component.html
+++ b/src/app/agent/agent.component.html
@@ -1,5 +1,3 @@
 <app-sidebar></app-sidebar>
-    <div class="other" style="float: left;">
-        <app-chat-list></app-chat-list>
-
-    </div>
+<app-chat-list></app-chat-list>
+<app-chat-box></app-chat-box>
