--- a/src/app/agent/layout/chat-list/chat-list.component.css
+++ b/src/app/agent/layout/chat-list/chat-list.component.css
@@ -3,6 +3,7 @@
     background-color: rgb(235, 235, 235);
     height: 100%;
     overflow-y: scroll;
+    scroll-behavior: smooth;
     float: left;
 }
 
