--- a/src/app/agent/layout/chat-list/chat-list.component.html
+++ b/src/app/agent/layout/chat-list/chat-list.component.html
@@ -126,6 +126,90 @@
                 Hi how are you ? Is this ...
             </div>
         </div>
+            
+        <div class="card">
+            <div class="message-header">
+                <p-avatar label="P" shape="circle"></p-avatar>
+                <div class="message-header-message">
+                    <span> <span class="chat-category">Live Chat</span> <span class="chat-person">Parveen Singh</span></span>
+                </div>
+            </div>
+            <div class="message-message">
+                Hi how are you ? Is this ...
+            </div>
+        </div>
+            
+        <div class="card">
+            <div class="message-header">
+                <p-avatar label="P" shape="circle"></p-avatar>
+                <div class="message-header-message">
+                    <span> <span class="chat-category">Live Chat</span> <span class="chat-person">Parveen Singh</span></span>
+                </div>
+            </div>
+            <div class="message-message">
+                Hi how are you ? Is this ...
+            </div>
+        </div>
+            
+        <div class="card">
+            <div class="message-header">
+                <p-avatar label="P" shape="circle"></p-avatar>
+                <div class="message-header-message">
+                    <span> <span class="chat-category">Live Chat</span> <span class="chat-person">Parveen Singh</span></span>
+                </div>
+            </div>
+            <div class="message-message">
+                Hi how are you ? Is this ...
+            </div>
+        </div>
+            
+        <div class="card">
+            <div class="message-header">
+                <p-avatar label="P" shape="circle"></p-avatar>
+                <div class="message-header-message">
+                    <span> <span class="chat-category">Live Chat</span> <span class="chat-person">Parveen Singh</span></span>
+                </div>
+            </div>
+            <div class="message-message">
+                Hi how are you ? Is this ...
+            </div>
+        </div>
+            
+        <div class="card">
+            <div class="message-header">
+                <p-avatar label="P" shape="circle"></p-avatar>
+                <div class="message-header-message">
+                    <span> <span class="chat-category">Live Chat</span> <span class="chat-person">Parveen Singh</span></span>
+                </div>
+            </div>
+            <div class="message-message">
+                Hi how are you ? Is this ...
+            </div>
+        </div>
+            
+        <div class="card">
+            <div class="message-header">
+                <p-avatar label="P" shape="circle"></p-avatar>
+                <div class="message-header-message">
+                    <span> <span class="chat-category">Live Chat</span> <span class="chat-person">Parveen Singh</span></span>
+                </div>
+            </div>
+            <div class="message-message">
+                Hi how are you ? Is this ...
+            </div>
+        </div>
+            
+        <div class="card">
+            <div class="message-header">
+                <p-avatar label="P" shape="circle"></p-avatar>
+                <div class="message-header-message">
+                    <span> <span class="chat-category">Live Chat</span> <span class="chat-person">Parveen Singh</span></span>
+                </div>
+            </div>
+            <div class="message-message">
+                Hi how are you ? Is this ...
+            </div>
+        </div>
         
         
     </div>
