--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -33,6 +33,10 @@
         </div>
     </div>
 
+    <div class="bottom-actions">
+        <button pButton type="button" style="width: 100%;" label="Logout" icon="pi pi-sign-out" iconPos="right" class="p-button-help"></button>
+    </div>
+
     
 
 </div>
