--- a/src/app/agent/layout/chat-box/chat-box.component.html
+++ b/src/app/agent/layout/chat-box/chat-box.component.html
@@ -33,6 +33,6 @@
 <div class="input-chat">
     <div class="p-inputgroup">
         <input type="text" pInputText placeholder="Keyword"> 
-        <button type="button" pButton pRipple label="Send" icon="pi pi-check"></button>        
+        <button type="button" style="background-color: purple;" pButton pRipple label="Send" icon="pi pi-check"></button>        
     </div>
 </div>
