--- a/src/app/agent/layout/chat-list/chat-list.component.css
+++ b/src/app/agent/layout/chat-list/chat-list.component.css
@@ -50,13 +50,14 @@
 
 .chat-category{
     color: white;
-    font-size: 0.7rem;
+    font-size: 0.5rem;
     background-color: purple;
     padding: 2px;
     margin: 0px;
-    margin-left: 10px;
+    margin-left: 5px;
     margin-right: 5px;
     border-radius: 5px;
+    display: inline-block;
 }
 
 .chat-person{
