--- a/src/app/agent/layout/chat-list/chat-list.component.html
+++ b/src/app/agent/layout/chat-list/chat-list.component.html
@@ -22,16 +22,18 @@
         
     </div>
 
-    <ng-template #incomingChatDiv class="chat-list-chats">
-        <div (click)="setSelectedChat(chat.mobile)" *ngFor="let chat of chatlist" [ngClass]="{'card-active':chat.mobile === selectedChat,'card':chat.mobile !== selectedChat}">
-            <div class="message-header">
-                <p-avatar [label]="chat.username.substring(0,1)" shape="circle"></p-avatar>
-                <div class="message-header-message">
-                    <span> <span class="chat-category">{{selectedChatList}}</span> <span class="chat-person">{{chat.username}}</span></span>
+    <ng-template #incomingChatDiv>
+        <div class="chat-list-chats">
+            <div (click)="setSelectedChat(chat.mobile)" *ngFor="let chat of chatlist" [ngClass]="{'card-active':chat.mobile === selectedChat,'card':chat.mobile !== selectedChat}">
+                <div class="message-header">
+                    <p-avatar [label]="chat.username.substring(0,1)" shape="circle"></p-avatar>
+                    <div class="message-header-message">
+                        <span> <span class="chat-category">{{selectedChatList}}</span> <span class="chat-person">{{chat.username}}</span></span>
+                    </div>
                 </div>
-            </div>
-            <div class="message-message">
-                {{chat.mobile_no}}
+                <div class="message-message">
+                    {{chat.mobile_no}}
+                </div>
             </div>
         </div>
     </ng-template>
