Integrate socket into UI

--- a/src/app/agent/layout/chat-box/chat-box.component.css
+++ b/src/app/agent/layout/chat-box/chat-box.component.css
@@ -77,11 +77,16 @@
     height: 1rem;
     position: absolute;
   }
+
+  .message-chat{
+    width: 100%;
+  }
   
   p.from-me {
     align-self: flex-end;
     background-color: purple;
     color: #fff; 
+    margin-left: auto !important;
   }
   
   p.from-me::before {
@@ -173,7 +178,7 @@
   .container {
     margin: 0 auto;
     padding: 1rem;
-    padding-top: 70px;
+    padding-top: 100px;
   }
   
   h1 {
