--- a/src/app/agent/layout/chat-box/chat-box.component.html
+++ b/src/app/agent/layout/chat-box/chat-box.component.html
@@ -1,4 +1,4 @@
-<div class="chat-box-container">
+<div #target class="chat-box-container">
     <div class ="sticky-header">
         <span id="customer-name">Parveen Singh</span>
         <span id="chat-id">#1007</span>
@@ -7,32 +7,19 @@
 
     <div class="container">
         <div class="imessage">
-          <p class="from-them">It was loud. We just laid there and said &ldquo;is this an earthquake? I think this is an earthquake.&rdquo;</p>
-          <p class="from-me">Like is this an earthquake just go back to sleep</p>
-          <p class="from-them">It&rsquo;s more like &ldquo;this is an earthquake. Check the Internet. Yup. Earthquake. This is the size. This is the epicenter. Check social media. Make sure the East Coast knows I&rsquo;m alive. Okay, try and go back to sleep.&rdquo;</p>
-          <p class="from-me">👍🏻</p>
-          <p class="from-me">Glad you&rsquo;re safe</p>
-          <p class="from-them">It was loud. We just laid there and said &ldquo;is this an earthquake? I think this is an earthquake.&rdquo;</p>
-          <p class="from-me">Like is this an earthquake just go back to sleep</p>
-          <p class="from-them">It&rsquo;s more like &ldquo;this is an earthquake. Check the Internet. Yup. Earthquake. This is the size. This is the epicenter. Check social media. Make sure the East Coast knows I&rsquo;m alive. Okay, try and go back to sleep.&rdquo;</p>
-          <p class="from-me">👍🏻</p>
-          <p class="from-me">Glad you&rsquo;re safe</p>
-          <p class="from-them">It was loud. We just laid there and said &ldquo;is this an earthquake? I think this is an earthquake.&rdquo;</p>
-          <p class="from-me">Like is this an earthquake just go back to sleep</p>
-          <p class="from-them">It&rsquo;s more like &ldquo;this is an earthquake. Check the Internet. Yup. Earthquake. This is the size. This is the epicenter. Check social media. Make sure the East Coast knows I&rsquo;m alive. Okay, try and go back to sleep.&rdquo;</p>
-          <p class="from-me">👍🏻</p>
-          <p class="from-me">Glad you&rsquo;re safe</p>
-          <p class="from-them">It was loud. We just laid there and said &ldquo;is this an earthquake? I think this is an earthquake.&rdquo;</p>
-          <p class="from-me">Like is this an earthquake just go back to sleep</p>
-          <p class="from-them">It&rsquo;s more like &ldquo;this is an earthquake. Check the Internet. Yup. Earthquake. This is the size. This is the epicenter. Check social media. Make sure the East Coast knows I&rsquo;m alive. Okay, try and go back to sleep.&rdquo;</p>
-          <p class="from-me">👍🏻</p>
-          <p class="from-me">Glad you&rsquo;re safe</p>
+            <p *ngIf="chatList === null">Loading ...</p>
+            <p *ngIf="chatList?.length === 0">No messaged found. Send a new Message to begin</p>
+            <div class="message-chat" *ngFor="let chat of chatList" >
+                <p *ngIf="chat.user" [ngClass]="{'from-them':chat.user !==null}">{{chat.user}}</p>
+                <p *ngIf="chat.agent" [ngClass]="{'from-me':chat.agent !==null}">{{chat.agent}}</p>
+            </div>
         </div>
     </div>
 </div>
+
 <div class="input-chat">
     <div class="p-inputgroup">
-        <input type="text" [formControl] = "chatInput" pInputText placeholder="Keyword"> 
+        <input type="text" (keydown)="checkEnterKey($event)" [formControl] = "chatInput" pInputText placeholder="Keyword"> 
         <button type="button" (click)="sendSocketMessage()" style="background-color: purple;" pButton pRipple label="Send" icon="pi pi-check"></button>        
     </div>
 </div>
