--- a/src/app/agent/layout/chat-box/chat-box.component.css
+++ b/src/app/agent/layout/chat-box/chat-box.component.css
@@ -5,6 +5,16 @@
     overflow-y: scroll;
 }
 
+.chat-time{
+  font-size: x-small;
+}
+
+.chat-time-agent{
+  position: absolute;
+  right: 5px;
+  bottom: 3px;
+}
+
 #customer-name{
     font-size: 24px;
     font-weight: bold;
@@ -87,6 +97,7 @@
     background-color: purple;
     color: #fff; 
     margin-left: auto !important;
+    padding-bottom: 20px !important;
   }
   
   p.from-me::before {
