--- a/src/app/agent/layout/chat-box/chat-box.component.html
+++ b/src/app/agent/layout/chat-box/chat-box.component.html
@@ -10,8 +10,8 @@
             <p *ngIf="chatList === null">Loading ...</p>
             <p *ngIf="chatList?.length === 0">No messaged found. Send a new Message to begin</p>
             <div class="message-chat" *ngFor="let chat of chatList" >
-                <p *ngIf="chat.user" [ngClass]="{'from-them':chat.user !==null}">{{chat.user}}</p>
-                <p *ngIf="chat.agent" [ngClass]="{'from-me':chat.agent !==null}">{{chat.agent}}</p>
+                <p *ngIf="chat.user" [ngClass]="{'from-them':chat.user !==null}">{{chat.user}}<br/><span class="chat-time">{{chat.time}}</span></p>
+                <p *ngIf="chat.agent" [ngClass]="{'from-me':chat.agent !==null}">{{chat.agent}}<br/><span class="chat-time chat-time-agent">{{chat.time}}</span></p>
             </div>
         </div>
     </div>
