change chat name based on selection

--- a/src/app/agent/layout/chat-box/chat-box.component.html
+++ b/src/app/agent/layout/chat-box/chat-box.component.html
@@ -1,8 +1,8 @@
 <div #target class="chat-box-container">
     <div class ="sticky-header">
-        <span id="customer-name">Parveen Singh</span>
-        <span id="chat-id">#1007</span>
-        <span id="chat-type">Live Chat</span>
+        <span id="customer-name">{{clientName}}</span>
+        <!-- <span id="chat-id">#1007</span> -->
+        <span id="chat-type">{{selectedChatList}}</span>
     </div>
 
     <div class="container">
